--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1"
 tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "rt"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
+serenity = "0.12"
