--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "rt"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serenity = "0.12"
+dotenv = "0.15"
+dotenv_codegen = "0.15"
